# ChangeLog for dev-libs/icu
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.88 2009/06/28 16:57:03 klausman Exp $

  28 Jun 2009; Tobias Klausmann <klausman@gentoo.org> icu-4.2.ebuild:
  Stable on alpha, bug #275593

  28 Jun 2009; Brent Baude <ranger@gentoo.org> icu-4.2.ebuild:
  Marking icu-4.2 ppc64 for bug 275593

*icu-4.2 (12 May 2009)

  12 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +icu-4.2.ebuild:
  Version bump.

  08 May 2009; Peter Alfredsen <loki_val@gentoo.org> icu-3.8.1-r1.ebuild,
  icu-4.0.1.ebuild:
  Fix bug 258377, gcc-4.4 compatibility. Thanks to Daniel J.
  <sleeperseven@hotmail.com> for the patch.

  18 Apr 2009; Raúl Porcel <armin76@gentoo.org> icu-4.0.1.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #239538

  18 Apr 2009; Tobias Klausmann <klausman@gentoo.org> icu-4.0.1.ebuild:
  Stable on alpha, bug #239538

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> icu-4.0.1.ebuild:
  Stable for HPPA (bug #239538).

  15 Apr 2009; Markus Meier <maekke@gentoo.org> icu-4.0.1.ebuild:
  amd64/x86 stable, bug #239538

  15 Apr 2009; Brent Baude <ranger@gentoo.org> icu-4.0.1.ebuild:
  Marking icu-4.0.1 ppc64 and ppc for bug 239538

  14 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +files/icu-4.0.1-TestDisplayNamesMeta.patch, icu-4.0.1.ebuild:
  Fix TestDisplayNamesMeta test (bug #265352).

  14 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +files/icu-4.0.1-fix_parallel_building.patch, icu-4.0.1.ebuild:
  Fix parallel building (bug #265128).

*icu-4.0.1 (05 Apr 2009)

  05 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  metadata.xml, +icu-4.0.1.ebuild:
  Version bump (bug #248912).

  20 Feb 2008; Steve Dibb <beandog@gentoo.org> icu-3.6-r2.ebuild:
  amd64 stable, security bug 208001

  10 Feb 2008; Olivier Crête <tester@gentoo.org> icu-3.8.1-r1.ebuild: