@@ -17,11 +17,11 @@ DIST icu4c-4_0-docs.zip 4366805 RMD160 ce81012d86ff609b443b710f822f107d629a75ed 
 DIST icu4c-4_0_1-src.tgz 12356471 RMD160 e40e7ffddd3134a34fe7e7bc98d776c5b67b637c SHA1 65a65e9cd5670e113031def9448f65fb8f84f47a SHA256 fe4d33cc7393c355df7b13080e1c3717ec1acac2f8cfe452b691f33c5f467259
 DIST icu4c-4_2-docs.zip 4767072 RMD160 0ef1c2ef6f649924fa9ee603a48ae664965b0eec SHA1 703760245543aa64fa92084d77bba4f019bab0ae SHA256 2310cc74088ea715b083e24ff75d9d2c71533712b190eaccc901c6cb6bfd196f
 DIST icu4c-4_2-src.tgz 13721262 RMD160 255c9d999952c02e959540d8181fbfbe79c7968d SHA1 a1694b49d01c0104a573cca7e94e83b39931b0e4 SHA256 65ab82b70614adf759b1e94324178597f703ad17878513e4802ccc4f061408a5
-EBUILD icu-3.6-r1.ebuild 914 RMD160 f35022620c99fa9d5afbeac6fd2f7ae53bb7c2a6 SHA1 65da8dbe37454bec6e8c23325514b01880b101b8 SHA256 24e110608a02c5d12f2fa2bdbb86ff1e6eb6626a999147cbc054a653a45983c5
+DIST icu4c-4_2_1-src.tgz 13161131 RMD160 1b94317a117c40d564ec047cff9cb2de2de3bd9e SHA1 872a77fca51325ab0b335cbbadc1739576078434 SHA256 814de31e1413df945cdd34939b424c4cf7a94d1c481f2d44c99c8ca52b288063
 EBUILD icu-3.6-r2.ebuild 991 RMD160 8904e364dd711e7bcfd044fba54767c13afa40f8 SHA1 bcb061c482dae441ec0ae0d7bc4164d339e4346c SHA256 ff6d3a8ac32bd5490dcf5e3cd9a0004ac285099c3f79362de47ca4b30822cd92
 EBUILD icu-3.8.1-r1.ebuild 2711 RMD160 24a64094d03e10865a86b5474077a6fbaaf98ee5 SHA1 dbc4380d97055bd5bb4b354029b986e7d8fdb717 SHA256 ff3707a07599d0757174175131025f478c5cc3e8cd62c094ab81543c621c74d5
-EBUILD icu-3.8.1.ebuild 2146 RMD160 158d1c903f6a2a96e844f81fbfe026c0d649786e SHA1 7782aa058d3bd7d1baeb30fe2bd31043bf542474 SHA256 61e04f4042cbd8743b154030d67e4cb18ebfea59a3938be13da45f4b493f271d
 EBUILD icu-4.0.1.ebuild 2406 RMD160 d79f69dab400729c859568cb27074ed2f7aac434 SHA1 4faee1effd77b703a4bde8e9f7c30142d4ce3d38 SHA256 2c8885f5aa49ae5e53edcea79c42bd10ffeae51ad55a94b2b79e01d1bd00adcf
+EBUILD icu-4.2.1.ebuild 1969 RMD160 70c24abf74bcef990798beacf6d72cd0e96e6465 SHA1 475e302f423328286a4e16944f15707b18aeca10 SHA256 81bcadf258a8f076a4e54a6f820ae97370e6813338ec0f254081c76f74f5be40
 EBUILD icu-4.2.ebuild 1967 RMD160 7f67af4b80c56b4fcbd393edf865838ce159c453 SHA1 58af971d703515ee559e040993a3d4f5822bada6 SHA256 05c380a85570b2840a8caaab35b1d06672a1490a0eb94b7498ab3a890d0f74c6
-MISC ChangeLog 10548 RMD160 908f4c8fd7e50952373f5fec8c77c7c9cfcfbe2b SHA1 62c5c4e7f7f71189cf34d9fbedc0520114de698a SHA256 d5e8f630ff602e4143289aa733e55b50c9965b69953f84078fde81cecc724101
+MISC ChangeLog 10685 RMD160 22aea9e7894d574086d0f4c3cc244ad3547359a8 SHA1 66b40149ab308590ac93afc735ac7cfb2c461ad0 SHA256 322231f344da2ecedef5c390587b0f90b1e23830671ed864232f0761d7d5cf24
 MISC metadata.xml 274 RMD160 c5ce174bf40a37d632d003bab5e2c5b97777a1c6 SHA1 ccf8f018b8d3a49a1557b5f77e29802cbbc6140d SHA256 b2c70fe9d0595a367c5d41793662a02d301f77b09b6dc70f5b675c2725419a6a
