@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/icu
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.88 2009/06/28 16:57:03 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.89 2009/07/03 21:49:04 arfrever Exp $
+
+*icu-4.2.1 (03 Jul 2009)
+
+  03 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +icu-4.2.1.ebuild:
+  Version bump.
 
   28 Jun 2009; Tobias Klausmann <klausman@gentoo.org> icu-4.2.ebuild:
   Stable on alpha, bug #275593
